fix: Gutter z-index position

--- a/src/app.css
+++ b/src/app.css
@@ -149,6 +149,7 @@ iframe {
   height: 100%;
   min-height: 100vh;
   background-color: #6a6e73;
+  z-index: 2;
 }
 
 .gutter.gutter-vertical {
